--- a/css/dolphin.css
+++ b/css/dolphin.css
@@ -19,4 +19,10 @@ html {
 }
 
 /* Write your solution here */
+@media only screen and (min-width: 524px) and (max-width: 1170px) {
+  #dolphin {
+    top: -50px;
+    transform: rotate(0.75turn);
+  }
+}
 
